--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "rmf_traffic_editor"]
 	path = rmf_traffic_editor
 	url = https://github.com/open-rmf/rmf_traffic_editor.git
+[submodule "rmf_demos"]
+	path = rmf_demos
+	url = https://github.com/open-rmf/rmf_demos.git
+[submodule "rmf-web"]
+	path = rmf-web
+	url = https://github.com/open-rmf/rmf-web.git
