--- a/rmf_hamal/rmf_config/hamal_config.yaml
+++ b/rmf_hamal/rmf_config/hamal_config.yaml
@@ -2,7 +2,7 @@
 # RMF Fleet parameters
 
 rmf_fleet:
-  name: "moobot"
+  name: "HML1500"
   limits:
     linear: [0.5, 0.75] # velocity, acceleration
     angular: [0.6, 2.0] # velocity, acceleration
@@ -36,7 +36,7 @@ rmf_fleet:
   finishing_request: "park" # [park, charge, nothing]
   responsive_wait: True # Should responsive wait be on/off for the whole fleet by default? False if not specified.
   robots:
-    moobot:
+    HML1500:
         charger: "charging_station"
         # responsive_wait: False # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
     # tinyRobot2:
