--- a/ff_hamal/free_fleet_server_ros2/package.xml
+++ b/ff_hamal/free_fleet_server_ros2/package.xml
@@ -16,6 +16,8 @@
   
   <depend>rclcpp</depend>
   <depend>rmf_fleet_msgs</depend>
+  <depend>rmf_task_msgs</depend>
+  
   <depend>free_fleet</depend>
   
   <test_depend>ament_lint_common</test_depend>
