--- a/ff_hamal/free_fleet_server_ros2/package.xml
+++ b/ff_hamal/free_fleet_server_ros2/package.xml
@@ -17,6 +17,8 @@
   <depend>rclcpp</depend>
   <depend>rmf_fleet_msgs</depend>
   <depend>rmf_task_msgs</depend>
+  <depend>rmf_dispenser_msgs</depend>
+  <depend>rmf_ingestor_msgs</depend>
   
   <depend>free_fleet</depend>
   
