--- a/rmf_hamal/rmf_config/config.yaml
+++ b/rmf_hamal/rmf_config/config.yaml
@@ -2,7 +2,7 @@
 # RMF Fleet parameters
 
 rmf_fleet:
-  name: "moobot"
+  name: "HML"
   limits:
     linear: [0.5, 0.75] # velocity, acceleration
     angular: [0.6, 2.0] # velocity, acceleration
@@ -34,7 +34,7 @@ rmf_fleet:
   finishing_request: [park, charge] #"nothing" # [park, charge, nothing]
   robots:
     # Here the user is expected to append the configuration for each robot in the fleet.
-    moobot:
+    HML1500:
       charger: "charging_station"
 
 fleet_manager:
