--- a/rmf_hamal/rmf_config/config.yaml
+++ b/rmf_hamal/rmf_config/config.yaml
@@ -31,7 +31,7 @@ rmf_fleet:
     delivery: True
     clean: False
   actions: ["teleop"]
-  finishing_request: [park, charge] #"nothing" # [park, charge, nothing]
+  finishing_request: "nothing" # [park, charge, nothing]
   robots:
     # Here the user is expected to append the configuration for each robot in the fleet.
     HML1500:
